--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -19,6 +19,30 @@ code {
   position: absolute;
 }
 
+.game-window {
+  width: 100%;
+  height: 100%;
+}
+
+.start-menu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  padding: 20px 30px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.welcome-start-menu {
+  font-size: 75px;
+  color: purple;
+}
+
 * {
   color: #000000;
 }
